# nzxt-cam-linux

./: .gitignore  CONTRIBUTING.md  README.md  fix-fan-permissions.sh  index.html  install.sh  package-lock.json  package.json  tailwind.config.js  tsconfig.json  uninstall.sh  vite.config.ts
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/resources/: 99-nzxt-kraken.rules
src-tauri/src/: commands.rs  config.rs  fans.rs  image_io.rs  lib.rs  main.rs  profile.rs  types.rs
src-tauri/src/render/: fonts.rs  mod.rs  scene.rs
src-tauri/src/sensors/: cpu.rs  gpu.rs  mod.rs
src-tauri/src/usb/: driver.rs  mod.rs  protocol.rs
src/components/: AppHeader.tsx  AppSidebar.tsx  CloseDialog.tsx  DeviceStatus.tsx  LCDPreview.tsx  MediaUploader.tsx  ModeSelector.tsx  ProfileManager.tsx  RingControl.tsx  Settings.tsx  TemperatureBar.tsx
src/components/display/: DisplayEditor.tsx  ElementInspector.tsx  PreviewCanvas.tsx  TempDisplayConfig.tsx
src/components/screens/: CoolingScreen.tsx  LCDScreen.tsx  LightingScreen.tsx  MonitoringScreen.tsx  SettingsScreen.tsx
src/components/ui/: Card.tsx  CircularGauge.tsx  DonateWidget.tsx  Dropdown.tsx  LCDCircularPreview.tsx  LogoMark.tsx  ProgressBar.tsx  Slider.tsx  SparkChart.tsx  ToggleSwitch.tsx
src/context/: AppContext.tsx
src/hooks/: useDevice.ts  useIPC.ts  useSmoothedValue.ts  useTemperatures.ts  useWindowVisibility.ts
src/i18n/: LangContext.tsx  translations.ts
src/lib/: api.ts
src/shared/: devices.ts  display.ts
src/styles/: globals.css
